# ChangeLog for dev-java/junit
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/junit/ChangeLog,v 1.30 2006/11/18 10:18:47 nixnut Exp $

  21 Apr 2007; Miroslav Šulc <fordfrog@gentoo.org> -junit-4.1.ebuild,
  -junit-4.2.ebuild, +junit-4.3.1.ebuild:
  Version bump

  13 Feb 2007; Vlastimil Babka <caster@gentoo.org> +junit-3.8.2-r1.ebuild,
  +files/junit-3.8.2-build.xml:
  Revbump of junit-3.8.2 that stops symlinking to ant-core/lib, so that can
  see what's gonna break.

  03 Dec 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog:
  version bump

  19 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  version bump. warning: junit.jar is NOT symlinked to ant-core lib folder, as
  the junit3 one is

  19 Nov 2006; Federico Fissore <federico@fsfe.org> ChangeLog:
  version bump. warning: junit.jar is NOT symlinked to ant-core lib folder, as
  the junit3 one is

  18 Nov 2006; nixnut <nixnut@gentoo.org> junit-3.8.1-r3.ebuild:
  Stable on ppc wrt bug 155261

  16 Nov 2006; Andrej Kacian <ticho@gentoo.org> junit-3.8.1-r3.ebuild:
  Stable on x86, bug #155261.

  15 Nov 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  +files/junit-3.8.2-build.xml:
  Add junit-3.8.2-build.xml to fix bug 155194.

*junit-3.8.2 (15 Nov 2006)

  15 Nov 2006; William L. Thomson Jr. <wltjr@gentoo.org>
  +junit-3.8.2.ebuild:
  Revision bump, moved ebuild from overlay.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> junit-3.8.1-r1.ebuild,
  junit-3.8.1-r3.ebuild:
  Dropping sparc keywords, see #96229

  10 Sep 2006; Joshua Nichols <nichoj@gentoo.org> junit-3.8.1-r3.ebuild:
  Keyworded ~ia64

  23 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> junit-3.8.1-r3.ebuild:
  Add ~x86-fbsd keyword.

*junit-3.8.1-r3 (22 Jul 2006)

  22 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> -junit-3.8.1-r2.ebuild,
  +junit-3.8.1-r3.ebuild:
  Add java-ant-2.

*junit-3.8.1-r2 (21 Jul 2006)
