@@ -1,7 +1,4 @@
-AUX junit-3.8.2-build.xml 3176 RMD160 1f224d755db6c5b0c255620b2b33d503078ba3c8 SHA1 43087ed52528088f63b03b1934240a5962931d09 SHA256 827fda6bc6f3f4983ce79fc7f8934ada5163e49966336b15d4a709c26549eeb1
-DIST junit3.8.2.zip 461426 RMD160 c66d64d8aa738460490e62fd332c112076d9b662 SHA1 701578302e244e5173dca3040cce0774a5c39645 SHA256 aae23d20e6f4dc45b4bf0b10fedcbd209c100342a0cafce1aa07d2da6da1f24a
 DIST junit4.3.1.zip 643042 RMD160 0d47b3531fc054269329301b7990bb1a0860054a SHA1 ec97c2eef7135dc0e94e7ba7a8bf25e311724e55 SHA256 4b5c9c3eb07c53efa036d904a192c93d95445551aef7c6195a87395c6a834f0c
-EBUILD junit-3.8.2-r1.ebuild 983 RMD160 4e762a55a5d9e886473141e1c5813d8596c409b0 SHA1 cc03ac7ac6f5782c4a2e69855e0310af3d9364a3 SHA256 ea6f3a82b7c1a5a3d8bca646d5dfe41ed0402a5922cdbadfa720b9dd578244a8
-EBUILD junit-4.3.1.ebuild 2856 RMD160 6782212b33c03bfe6638bcb2989639a8032bcdd9 SHA1 49ceee736f7a232dc6e94c8e193baeb79d5172e5 SHA256 a5f7f1da2e0f9cc622390f0486f4f79274ab4f1b82725d728060095c95cf9c34
-MISC ChangeLog 5167 RMD160 e9aab5e484a9dd2bded3c5419c9febcf7f7df5fa SHA1 41f139090058dd4281444c3e153904a5b45f9c82 SHA256 02f0bde1b8b3f1bc1276e58cbdf993199c3bd926b9f46f987da30ff9f80f6aee
+EBUILD junit-4.3.1.ebuild 2849 RMD160 829b998331a0c2979b725940bdf9a9ab2242541f SHA1 9692f2b1fb7d88821c08315455248ce000b4a3ab SHA256 3b89158dea6a645b4168e30cb158a4f807b8324567ce77a2d32530164111fd98
+MISC ChangeLog 5322 RMD160 70ab36a43b1be70e4328c393395be474afd935df SHA1 f30b83592d6857dc099c14816dea11df23949d93 SHA256 a5da4d00aee436e21fbae3aaa2f2135f080c7f62a85d129531b2f7bfc9745219
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
