@@ -1,87 +1,0 @@
-<?xml version="1.0" ?>
-<!-- JUnit build script using ant 1.4 --><project basedir="." default="dist" name="junit">
-	<property file="${user.home}/.junit.properties"/>
-	<property name="build.compiler" value="classic"/>
-	<property name="version" value="3.8.2"/>
-	<property name="dist" value="junit${version}"/>
-	<property name="versionfile" value="junit/runner/Version.java"/>
-	<property name="zipfile" value="${dist}.zip"/>
-	<target name="init">
-		<tstamp/>
-	</target>
-
-	<target depends="init" name="versiontag">
-		<filter token="version" value="${version}"/>
-		<copy file="${versionfile}" filtering="on" tofile="${versionfile}tmp"/>
-		<move file="${versionfile}tmp" tofile="${versionfile}"/>
-	</target>
-
-	<target depends="versiontag" name="build">
-		<javac debug="on" destdir="." source="1.3" srcdir="." target="1.3"/>	
-	</target>
-
-	<target depends="build" name="dist">
-		<delete dir="${dist}"/>
-		<mkdir dir="${dist}"/>
-		<jar basedir="." excludes="**/*.jar, junit/tests/**, junit/samples/**, **/*.class, doc/**, README.html, .classpath, .project, cpl-v10.html" jarfile="${dist}/src.jar"/>
-		<jar basedir="." excludes="**/*.jar, junit/tests/**, junit/samples/**, **/*.java, doc/**, README.html,  build.xml, jar-manifest.txt, .classpath, .project, cpl-v10.html" jarfile="${dist}/junit.jar"/>
-		<copy todir="${dist}/junit/samples">
-			<fileset dir="junit/samples"/>
-		</copy>
-		<copy todir="${dist}/junit/tests">
-			<fileset dir="junit/tests"/>
-		</copy>
-
-
-		<delete file="${dist}/junit/tests/runner/test.jar"/> 
-		<jar basedir="." includes="junit/tests/runner/LoadedFromJar.class" jarfile="${dist}/junit/tests/runner/test.jar"/> 
-
-		<mkdir dir="${dist}/javadoc"/>
-		<javadoc author="false" destdir="${dist}/javadoc" packagenames="junit.framework.*, junit.extensions.*" source="1.3" sourcepath="." stylesheetfile="stylesheet.css" use="false" version="false" windowtitle="JUnit API"/>
-		<copy todir="${dist}/doc">
-			<fileset dir="doc"/>
-		</copy>		
-		<copy file="README.html" tofile="${dist}/README.html"/>
-		<copy file="cpl-v10.html" tofile="${dist}/cpl-v10.html"/>
-		
-		<java classname="junit.textui.TestRunner" fork="yes">
-			<arg value="junit.samples.AllTests"/>
-			<classpath>
-				<pathelement location="${dist}"/>
-				<pathelement location="${dist}/junit.jar"/>
-			</classpath>
-		</java>
-	</target>
-	
-	<target depends="dist" name="zip">
-		<zip basedir="." includes="${dist}/**" zipfile="${zipfile}"/>
-	</target>
-	
-	<target depends="dist" name="awtui">
-		<java classname="junit.awtui.TestRunner" fork="yes">
-			<arg value="junit.samples.AllTests"/>
-			<classpath>
-				<pathelement location="${dist}"/>
-				<pathelement location="${dist}/junit.jar"/>
-			</classpath>
-		</java>
-	</target>
-	
-	<target depends="dist" name="swingui">
-		<java classname="junit.swingui.TestRunner" fork="yes">
-			<arg value="junit.samples.AllTests"/>
-			<classpath>
-				<pathelement location="${dist}"/>
-				<pathelement location="${dist}/junit.jar"/>
-			</classpath>
-		</java>
-	</target>
-
-	<target name="clean">
-		<delete dir="${dist}" quiet="true"/>			
-		<delete file="${zipfile}" quiet="true"/> 
-		<delete>
-			<fileset dir="${basedir}" includes="**/*.class"/> 
-		</delete>
-	</target>
-</project>
